# goldo_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Marker.msg  MatchState.msg  OdometryEncoders.msg  OdometryParameters.msg  PIDConfig.msg  PointCloudXY.msg  Polygon.msg  RobotPose.msg
srv/: GetOdometryParameters.srv  MotorsSetPwm.srv  PropulsionExecuteTrajectory.srv  PropulsionMoveTo.srv  PropulsionPointTo.srv  PropulsionSetTrajectory.srv  SetBool.srv  SetOdometryParameters.srv  SetUInt32.srv
