<?xml version="1.0"?>
<package format="2">
  <name>goldo_msgs</name>
  <version>0.0.0</version>
  <description>The goldo_msgs package</description>
  <maintainer email="thomas.liennard@gmail.com">Thomas Liennard</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
  </export>
</package>
